--- a/trunk/ifpitaco_mobile/res/layout/activity_funcoes_list.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_funcoes_list.xml
@@ -2,27 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background01"
     android:orientation="vertical"
-    tools:context="br.edu.ifpb.ifpitaco_mobile.FuncoesListActivity"
-    android:background="@drawable/background01">
+    tools:context="br.edu.ifpb.ifpitaco_mobile.FuncoesListActivity" >
 
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="70px"
-    android:layout_marginBottom="70px">    
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
-
-    <ListView
-        android:id="@+id/myListView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
-  
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="60sp"
+        android:orientation="vertical" >
 
+        <ListView
+            android:id="@+id/myListView"
+            android:layout_width="match_parent"
+            android:layout_height="378dp" >
+        </ListView>
+    </LinearLayout>
 
 </LinearLayout>
