--- a/trunk/ifpitaco_mobile/res/layout/activity_login.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_login.xml
@@ -1,72 +1,92 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background01"
     android:orientation="vertical"
-    tools:context="br.edu.ifpb.ifpitaco_mobile.LoginActivity"
-    
-    android:background="@drawable/background01" >
+    tools:context="br.edu.ifpb.ifpitaco_mobile.LoginActivity" >
 
-    <TextView
-        android:id="@+id/usuarioView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ETEmailUsuario"
-        android:layout_alignRight="@+id/senhaTextView"
-        android:text="Usuário:"
-        android:textSize="20sp" />
-    
-    <TextView
-        android:id="@+id/senhaTextView"
+        android:layout_marginTop="170sp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/usuarioView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15sp"
+            android:text="Usuário:"
+            android:textSize="25sp" />
+
+        <EditText
+            android:id="@+id/ETEmailUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="26dp"
+            android:ems="10"
+            android:inputType="textEmailAddress" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ETSenhaUsuario"
-        android:layout_alignParentLeft="true"
-        android:text="Senha:   "
-        android:textSize="20sp" />
+        android:layout_marginTop="10sp"
+        android:orientation="horizontal" >
 
-    <EditText
-        android:id="@+id/ETEmailUsuario"
+        <TextView
+            android:id="@+id/senhaTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15sp"
+            android:text="Senha:"
+            android:textSize="25sp" />
+
+        <EditText
+            android:id="@+id/ETSenhaUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:layout_marginLeft="10sp"
+            android:ems="10"
+            android:inputType="textPassword" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/ETSenhaUsuario"
-        android:layout_alignLeft="@+id/cadastroTextView"
-        android:layout_marginBottom="26dp"
-        android:ems="10"
-        android:inputType="textEmailAddress">
-        <requestFocus />
-    </EditText>
+        android:layout_marginTop="10sp"
+        android:orientation="horizontal" >
 
-    <EditText
-        android:id="@+id/ETSenhaUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/BtEntrar"
-        android:layout_alignLeft="@+id/ETEmailUsuario"
-        android:layout_alignRight="@+id/ETEmailUsuario"
-        android:layout_marginBottom="36dp"
-        android:ems="10"
-        android:inputType="textPassword" >
+        <TextView
+            android:id="@+id/BtEntrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="61dp"
+            android:layout_marginLeft="30sp"
+            android:background="@layout/layout_botao"
+            android:text="Entrar"
+            android:paddingLeft="10sp"
+            android:paddingRight="5sp"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp" />
 
-    </EditText>
+        <TextView
+            android:id="@+id/cadastroTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="48dp"
+            android:layout_marginLeft="20dp"
+            android:background="@layout/layout_botao"
+            android:text="Cadastre-se"
+            android:paddingLeft="5sp"
+            android:paddingRight="5sp"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/cadastroTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp"
-        android:text="Cadastre-se"
-        android:textSize="25sp"/>
-
-    <Button
-        android:id="@+id/BtEntrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/cadastroTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="46dp"
-        android:text="Entrar" />
-
-</RelativeLayout>
+</LinearLayout>
