--- a/trunk/ifpitaco_mobile/res/layout/activity_splash_screen.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_splash_screen.xml
@@ -1,16 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    tools:context="${packageName}.${activityClass}" 
+    android:background="@drawable/splashscreen">
 
-    <ImageView
-        android:id="@+id/imageView1"
+   <TextView
+        android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp"
-        android:src="@drawable/logo" />
+        android:layout_marginLeft="90sp"
+        android:layout_marginRight="90sp"
+        android:layout_marginTop="10sp"
+        android:text="Bem Vindo!"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp">
 
-</RelativeLayout>
+        <requestFocus />
+    </TextView>
+    
+</LinearLayout>
