--- a/ifpitaco_mobile/res/layout/activity_cadastrar.xml
+++ b/ifpitaco_mobile/res/layout/activity_cadastrar.xml
@@ -1,82 +1,97 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background01"
     android:orientation="vertical"
-    tools:context="br.edu.ifpb.ifpitaco_mobile.CadastrarActivity"
-    
-    android:background="@drawable/background01" >
+    tools:context="br.edu.ifpb.ifpitaco_mobile.CadastrarActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/etNomeCadastro"
-        android:layout_alignRight="@+id/textView3"
-        android:text="Nome:"
-        android:textSize="20sp" />
-    
-    <EditText
-        android:id="@+id/etNomeCadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="55dp"
-        android:layout_marginRight="19dp"
-        android:ems="10"
-        android:inputType="textPersonName" >
+        android:layout_marginTop="130sp"
+        android:orientation="horizontal" >
 
-        <requestFocus />
-    </EditText>
-    
-     <TextView
-        android:id="@+id/textView2"
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:text="Nome:"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/etNomeCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/etSenhaCadastro"
-        android:layout_alignLeft="@+id/textView3"
-        android:text="E-mail:"
-        android:textSize="20sp" />
-    
-    <EditText
-        android:id="@+id/etEmailCadastro"
+        android:layout_marginTop="30sp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:text="E-mail:"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/etEmailCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etNomeCadastro"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="194dp"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
-    <TextView
-        android:id="@+id/textView3"
+        android:layout_marginTop="30sp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:text="Senha"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/etSenhaCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btCadastrar"
-        android:layout_marginRight="15dp"
-        android:layout_toLeftOf="@+id/etSenhaCadastro"
-        android:text="Senha"
-        android:textSize="20sp" />
-    
-     <EditText
-        android:id="@+id/etSenhaCadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etEmailCadastro"
-        android:layout_below="@+id/etEmailCadastro"
-        android:layout_marginTop="42dp"
-        android:ems="10"
-        android:inputType="textPassword" />
-     
-    <Button
+        android:layout_marginTop="20sp"
+        android:orientation="horizontal" >
+        
+         <TextView
         android:id="@+id/btCadastrar"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etSenhaCadastro"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:text="Cadastrar" />
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="110sp"
+        android:text="Cadastrar"
+        android:textSize="20sp" />
+        
+        
+    </LinearLayout>
 
-
-</RelativeLayout>
+   
+</LinearLayout>
