--- a/ifpitaco_mobile/res/layout/activity_fiscalizacoes.xml
+++ b/ifpitaco_mobile/res/layout/activity_fiscalizacoes.xml
@@ -11,8 +11,8 @@
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
    		android:orientation="vertical"
-    	android:layout_marginTop="70px"
-    	android:layout_marginBottom="70px">
+    	android:layout_marginTop="70sp"
+    	android:layout_marginBottom="70sp">
     	<ListView
         	android:id="@+id/listFiscalizacoes"
         	android:layout_width="match_parent"
