--- a/WebClient/css/home.css
+++ b/WebClient/css/home.css
@@ -76,6 +76,11 @@ body{
 .laike{
 	display: inline;
 	margin-left: 10px;
+	
+}
+
+.laike div, span{
+	cursor: pointer;
 }
 
 .laike div{
@@ -116,6 +121,68 @@ body{
 	font-size: 18px;
 	color: #f0ad4e;
 	margin-top: -15px;
+}
+
+.curiar_enquete_icon{
+	margin-top: -21px;
+	color: #d9534f;
+	font-size: 16px;
+	float: left;
+	cursor: pointer;
+}
+
+.left_options{
+	margin-top: 25px;
+	text-align: left;
+	color: white;
+	margin-left: 30px;
+}
+
+.list_people_laike{
+	width: 380px;
+	
+}
+
+
+#list_people_laike_div{
+	overflow: auto;
+	overflow-x: hidden;
+	width: 360px;
+	max-height: 350px;
+	word-wrap: break-word;
+
+}
+
+.modal_enquete_curiar_title{
+
+	margin-left: 0px;	
+
+}
+
+.modal_enquete_curiar{
+	background: rgba(0, 0, 0);
+	margin-left: 0px;	
+	border-left : 10px solid;
+	margin-bottom: 2px;
+
+}
+
+.modal_enquete_curiar_title > div{
+	font-size: 16px;
+	font-weight: 700;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.modal_enquete_curiar_title{
+	cursor: initial;
+}
+
+#spin{
+	position: absolute; 
+	right: -8px; 
+	margin-top: 30px;
 }
 
 
