--- a/trunk/WebClient/css/home.css
+++ b/trunk/WebClient/css/home.css
@@ -25,7 +25,7 @@ a:hover{
 
 body{
 	word-wrap: break-word;
-	background-image:url('../images/pattern-6plj.png');
+	background-image:url('../images/pattern-6plj.jpg');
 	font-family: Helvetica,Arial,sans-serif;
 }
 
@@ -115,6 +115,7 @@ body{
 .enquete_icon{
 	font-size: 18px;
 	color: #f0ad4e;
+	cursor: default;
 }
 
 .enquete_icon_no_vote{
@@ -124,10 +125,8 @@ body{
 }
 
 .curiar_enquete_icon{
-	margin-top: -21px;
 	color: #d9534f;
 	font-size: 16px;
-	float: left;
 	cursor: pointer;
 }
 
