--- a/trunk/WebClient/css/user_profile.css
+++ b/trunk/WebClient/css/user_profile.css
@@ -11,7 +11,7 @@
 
 body{
 	word-wrap: break-word;
-	background-image:url('../images/pattern-6plj.png');
+	background-image:url('../images/pattern-6plj.jpg');
 	font-family: Helvetica,Arial,sans-serif;
 }
 
