--- a/ifpitaco_mobile/res/layout/activity_post.xml
+++ b/ifpitaco_mobile/res/layout/activity_post.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/btImagemPerfilPost"
             android:layout_width="wrap_content"
             android:layout_height="52dp"
             android:layout_marginLeft="100sp"
